--- a/Landing.CSS
+++ b/Landing.CSS
@@ -1,6 +1,7 @@
-*{
+body{
     padding: 0;
-    margin: 0;
+    margin-left: 50px;
+    margin-right:50px;
     box-sizing: border-box;
 }
 .header-container{
@@ -8,6 +9,7 @@
     color: #fff;
     display: flex;
     justify-content:center;
+    font-size: 12px;
 }
 .header-item{
     display: flex;
@@ -39,18 +41,26 @@
     font-family: 'roboto',Arial;
     margin: 8px;
     font-weight: bold;
+    width: 85px;
+}
+.truck{
+    margin-right: 100px;
 }
 .main-container{
     display: flex;
     background-color:#1f2937;
     color:#fff;
     justify-content: center;
-    padding: 50px;
+    padding: 20px;
 }
 .main{
     display: flex;
     justify-content: space-between;
-    width: 550px;
+    width: 700px;
+}
+h1{
+    font-size: 30px;
+    font-weight: bolder;
 }
 .info-container{
     display: flex;
@@ -75,15 +85,14 @@
 
 
 .info-pic{
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border: 2px solid #3882f6;
     border-radius: 20px;
 }
 .content-container{
 display: flex;
 background-color: #e5e7eb;
-padding: 30px;
 text-align: center;
 font-style: italic;
 color:#1f2937
@@ -92,9 +101,10 @@ color:#1f2937
     display: flex;
     align-items: center;
     padding: 30px;
+    
 }
-b{
-    margin-left: 20px;
+div b{
+    margin-left: 450px;
 }
 .middle-container{
     display: flex;
@@ -105,8 +115,7 @@ b{
 .middle{
     display: flex;
     background-color: #3882f6;
-    margin: 20px;
-    width: 550px;
+    width: 600px;
     justify-content: space-between;
     padding: 20px;
     border-radius: 10px;    
@@ -120,6 +129,7 @@ b{
     border-radius: 9px;
     color: #fff;
     font-weight: bold;
+    margin-top: 50px;
 }
 .footer-container{
     display: flex;
