--- a/Landing.CSS
+++ b/Landing.CSS
@@ -1,7 +1,6 @@
 body{
     padding: 0;
-    margin-left: 50px;
-    margin-right:50px;
+    margin: 0;
     box-sizing: border-box;
 }
 .header-container{
