--- a/Landing.CSS
+++ b/Landing.CSS
@@ -1,4 +1,4 @@
-body{
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -43,7 +43,7 @@ body{
     width: 85px;
 }
 .truck{
-    margin-right: 100px;
+    margin-right: 50px;
 }
 .main-container{
     display: flex;
